--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -258,7 +258,7 @@
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":803,\"main\":\"Clouds\",\"description\":\"broken clouds\",\"icon\":\"04d\"}],\"base\":\"stations\",\"main\":{\"temp\":80.47,\"feels_like\":80.44,\"temp_min\":72.21,\"temp_max\":88.97,\"pressure\":1028,\"humidity\":42},\"visibility\":10000,\"wind\":{\"speed\":3,\"deg\":244,\"gust\":8.99},\"clouds\":{\"all\":75},\"dt\":1621625444,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1621588632,\"sunset\":1621641888},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":804,\"main\":\"Clouds\",\"description\":\"overcast clouds\",\"icon\":\"04d\"}],\"base\":\"stations\",\"main\":{\"temp\":78.28,\"feels_like\":78.21,\"temp_min\":67.95,\"temp_max\":84.81,\"pressure\":1014,\"humidity\":51},\"visibility\":10000,\"wind\":{\"speed\":3.44,\"deg\":0},\"clouds\":{\"all\":90},\"dt\":1621725962,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1621674983,\"sunset\":1621728346},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
      "execution_count": 13,
@@ -281,26 +281,26 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 803,\n",
+       " 'weather': [{'id': 804,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'broken clouds',\n",
+       "   'description': 'overcast clouds',\n",
        "   'icon': '04d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 80.47,\n",
-       "  'feels_like': 80.44,\n",
-       "  'temp_min': 72.21,\n",
-       "  'temp_max': 88.97,\n",
-       "  'pressure': 1028,\n",
-       "  'humidity': 42},\n",
+       " 'main': {'temp': 78.28,\n",
+       "  'feels_like': 78.21,\n",
+       "  'temp_min': 67.95,\n",
+       "  'temp_max': 84.81,\n",
+       "  'pressure': 1014,\n",
+       "  'humidity': 51},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 3, 'deg': 244, 'gust': 8.99},\n",
-       " 'clouds': {'all': 75},\n",
-       " 'dt': 1621625444,\n",
-       " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
+       " 'wind': {'speed': 3.44, 'deg': 0},\n",
+       " 'clouds': {'all': 90},\n",
+       " 'dt': 1621725962,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 3486,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1621588632,\n",
-       "  'sunset': 1621641888},\n",
+       "  'sunrise': 1621674983,\n",
+       "  'sunset': 1621728346},\n",
        " 'timezone': -14400,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "705abb0f",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "0952edd1",
    "metadata": {},
    "outputs": [
@@ -393,33 +393,33 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 803,\n",
+       " 'weather': [{'id': 804,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'broken clouds',\n",
-       "   'icon': '04n'}],\n",
+       "   'description': 'overcast clouds',\n",
+       "   'icon': '04d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 64.89,\n",
-       "  'feels_like': 64.04,\n",
-       "  'temp_min': 56.95,\n",
-       "  'temp_max': 72.37,\n",
-       "  'pressure': 1027,\n",
-       "  'humidity': 63},\n",
+       " 'main': {'temp': 78.28,\n",
+       "  'feels_like': 78.21,\n",
+       "  'temp_min': 67.95,\n",
+       "  'temp_max': 84.81,\n",
+       "  'pressure': 1014,\n",
+       "  'humidity': 51},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 5.99, 'deg': 277, 'gust': 11.99},\n",
-       " 'clouds': {'all': 75},\n",
-       " 'dt': 1621649913,\n",
-       " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
+       " 'wind': {'speed': 3.44, 'deg': 0},\n",
+       " 'clouds': {'all': 90},\n",
+       " 'dt': 1621725962,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 3486,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1621588632,\n",
-       "  'sunset': 1621641888},\n",
+       "  'sunrise': 1621674983,\n",
+       "  'sunset': 1621728346},\n",
        " 'timezone': -14400,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "843e801c",
    "metadata": {},
    "outputs": [],
@@ -444,21 +444,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "407f6877",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'type': 2,\n",
-       " 'id': 2013408,\n",
+       "{'type': 1,\n",
+       " 'id': 3486,\n",
        " 'country': 'US',\n",
-       " 'sunrise': 1621588632,\n",
-       " 'sunset': 1621641888}"
+       " 'sunrise': 1621674983,\n",
+       " 'sunset': 1621728346}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "1b3b8a20",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "'US'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,17 +490,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "123b3d22",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "72.37"
+       "84.81"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,17 +511,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "5bbc932b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1621649913"
+       "1621725962"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "9d180c86",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
        "42.3584"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "70489fea",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.3584 -71.0598 72.37 63 75 5.99\n"
+      "42.3584 -71.0598 84.81 51 90 3.44\n"
      ]
     }
    ],
@@ -593,17 +593,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "063f35ad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2021-05-22 02:18:33'"
+       "'2021-05-22 23:26:02'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
