--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "bc7ece25",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "a88d4a25",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -41,8 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "b19f44f2",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -61,8 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "ee86dfd8",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,8 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "e09ae4f3",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +92,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b931d2a",
    "metadata": {},
    "source": [
     "### Weather API key request"
@@ -105,8 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "2673761c",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,8 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ad3d9f43",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -139,8 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "417a68da",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -159,76 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1401d2b9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Make a 'Get' request for the city weather.\n",
-    "city_weather = requests.get(city_url)\n",
-    "city_weather"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "eab24b92",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "city_weather.status_code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "dccf39e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [404]>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Create an endpoint URL for a city.\n",
-    "city_url = url + \"&q=\" + \"Bston\"\n",
-    "city_weather = requests.get(city_url)\n",
-    "city_weather"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
-   "id": "6d100856",
    "metadata": {},
    "outputs": [
     {
@@ -243,6 +165,71 @@
     }
    ],
    "source": [
+    "# Make a 'Get' request for the city weather.\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_weather.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [404]>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Bston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Create an endpoint URL for a city.\n",
     "city_url = url + \"&q=\" + \"Boston\"\n",
     "city_weather = requests.get(city_url)\n",
@@ -252,7 +239,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "eaa6f9d9",
    "metadata": {},
    "outputs": [
     {
@@ -273,41 +259,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "e1165684",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 804,\n",
+       " 'weather': [{'id': 802,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'overcast clouds',\n",
-       "   'icon': '04d'}],\n",
+       "   'description': 'scattered clouds',\n",
+       "   'icon': '03d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 78.28,\n",
-       "  'feels_like': 78.21,\n",
-       "  'temp_min': 67.95,\n",
-       "  'temp_max': 84.81,\n",
-       "  'pressure': 1014,\n",
-       "  'humidity': 51},\n",
+       " 'main': {'temp': 78.82,\n",
+       "  'feels_like': 78.82,\n",
+       "  'temp_min': 75,\n",
+       "  'temp_max': 82.99,\n",
+       "  'pressure': 1012,\n",
+       "  'humidity': 32},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 3.44, 'deg': 0},\n",
-       " 'clouds': {'all': 90},\n",
-       " 'dt': 1621725962,\n",
+       " 'wind': {'speed': 9.22, 'deg': 320},\n",
+       " 'clouds': {'all': 40},\n",
+       " 'dt': 1622140776,\n",
        " 'sys': {'type': 1,\n",
        "  'id': 3486,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1621674983,\n",
-       "  'sunset': 1621728346},\n",
+       "  'sunrise': 1622106770,\n",
+       "  'sunset': 1622160622},\n",
        " 'timezone': -14400,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +305,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c6b8f154",
    "metadata": {},
    "outputs": [
     {
@@ -343,8 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "705abb0f",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -367,8 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "7f378c2a",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -385,41 +367,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "0952edd1",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 804,\n",
+       " 'weather': [{'id': 802,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'overcast clouds',\n",
-       "   'icon': '04d'}],\n",
+       "   'description': 'scattered clouds',\n",
+       "   'icon': '03d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 78.28,\n",
-       "  'feels_like': 78.21,\n",
-       "  'temp_min': 67.95,\n",
-       "  'temp_max': 84.81,\n",
-       "  'pressure': 1014,\n",
-       "  'humidity': 51},\n",
+       " 'main': {'temp': 78.82,\n",
+       "  'feels_like': 78.82,\n",
+       "  'temp_min': 75,\n",
+       "  'temp_max': 82.99,\n",
+       "  'pressure': 1012,\n",
+       "  'humidity': 32},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 3.44, 'deg': 0},\n",
-       " 'clouds': {'all': 90},\n",
-       " 'dt': 1621725962,\n",
+       " 'wind': {'speed': 9.22, 'deg': 320},\n",
+       " 'clouds': {'all': 40},\n",
+       " 'dt': 1622140776,\n",
        " 'sys': {'type': 1,\n",
        "  'id': 3486,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1621674983,\n",
-       "  'sunset': 1621728346},\n",
+       "  'sunrise': 1622106770,\n",
+       "  'sunset': 1622160622},\n",
        " 'timezone': -14400,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,8 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "843e801c",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,8 +424,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'scattered clouds'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston_data[\"weather\"][0][\"description\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
-   "id": "407f6877",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +469,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1b3b8a20",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +489,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "123b3d22",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +509,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5bbc932b",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +529,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9d180c86",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +549,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "70489fea",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +571,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f33d41d6",
    "metadata": {},
    "source": [
     "### Data conversion to date format"
@@ -585,7 +578,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5137c2a",
    "metadata": {},
    "source": [
     "#### datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
@@ -594,7 +586,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "063f35ad",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +611,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9953977b",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +635,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc28b632",
    "metadata": {},
    "outputs": [],
    "source": [
